<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="toast_message">The will launch my %s app!</string>
    <string name="spotify_button">Spotify Streamer</string>
    <string name="super_due_button">Super Duo</string>
    <string name="build_button">Build It Bigger</string>
    <string name="reader_button">XYZ Readerr</string>
    <string name="capstone_button">Capstone</string>
</resources>
